@@ -1,3 +1,12 @@
+2008-08-24  Patrick Spendrin    <ps_ml@gmx.de>
+
+    * src/lib/geodata/data/GeoDataContainer.{h|cpp}
+    * src/lib/geodata/data/GeoDataDocument.{h|cpp}
+    * src/lib/MarbleGeoDataModel.{h|cpp}
+
+    make GeoDataDocuments be unloadable
+    This means that tiles can be unloaded each by each
+
 2008-08-20  Simon Schmeisser  <mail_to_wrt@gmx.de>
 
     * src/lib/MarbleGeoDataModel.h
